--- a/public/index.html
+++ b/public/index.html
@@ -50,36 +50,122 @@
 
         <div class="grid grid-cols-12 md:gap-8 p-4">
             <!--sidebar-->
-            <div class=" hidden md:block bg-white col-span-3 lg:col-span-3 row-span-2">side-bar</div>
+            <div class=" hidden md:block  col-span-3 lg:col-span-3 row-span-2">
+                <div class="bg-white rounded-xl w-full h-full pr-4 py-4">
+                    <!--category section-->
+                    <div class="w-full p-6">
+                        <div class="text-orange-400 font-bold text-2xl mb-4">دسته بندی</div>
+                        <ul class="flex flex-col">
+                            <li class="flex justify-start items-center text-slate-800 py-2 cursor-pointer bg-gray-300 px-1 rounded-xl">
+                                <span class="bg-gray-100 w-5 h-5 relative rounded-full">
+                                    <svg class="absolute right-1 top-1.5 -bottom-5 w-4 h-5"
+                                         xmlns="http://www.w3.org/2000/svg" fill="none"><path
+                                            stroke="currentColor"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            stroke-width="1.13"
+                                            d="M13 4.75v7.5c0 3-.75 3.75-3.75 3.75h-4.5c-3 0-3.75-.75-3.75-3.75v-7.5C1 1.75 1.75 1 4.75 1h4.5c3 0 3.75.75 3.75 3.75ZM8.5 3.63h-3"/><path
+                                            stroke="currentColor"
+                                            stroke-linecap="round" stroke-linejoin="round"
+                                            stroke-width="1.13"
+                                            d="M7 13.82a1.16 1.16 0 1 0 0-2.32 1.16 1.16 0 0 0 0 2.32Z"/>
+                                    </svg>
+                                </span>
+                                <span class="mr-2 font-medium text-xl">تلفن همراه</span>
+                            </li>
+                            <li class="flex justify-start items-center text-slate-800 py-2 cursor-pointer">
+                                <span class="bg-gray-100 w-5 h-5 relative rounded-full">
+                                    <svg stroke="currentColor" class="absolute right-1 top-1.5 -bottom-5 w-4 h-5" xmlns="http://www.w3.org/2000/svg"  fill="none"><path
+                                            stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                            d="M4.3 1.33h7.4c2.37 0 2.97.6 2.97 2.96v4.22c0 2.38-.6 2.96-2.96 2.96H4.29c-2.36.01-2.96-.58-2.96-2.95V4.29c0-2.36.6-2.96 2.96-2.96ZM8 11.48v3.19M1.33 8.67h13.34M5 14.67h6"/>
+                                    </svg>
+                                </span>
+                                <span class="mr-2 font-medium text-xl">لپ تاپ</span>
+                            </li>
+                            <li class="flex justify-start items-center text-slate-800 py-2 cursor-pointer">
+                                <span class="bg-gray-100 w-5 h-5 relative rounded-full">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="absolute right-1 top-1.5 -bottom-5 w-4 h-5" fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M5.67 12.67h4.66c1.56 0 2.34-.78 2.34-2.34V5.67c0-1.56-.78-2.34-2.34-2.34H5.67c-1.56 0-2.34.78-2.34 2.34v4.66c0 1.56.78 2.34 2.34 2.34ZM10.67 1.33H5.33M10.67 14.67H5.33"/><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M7.67 6.33v2h2"/></svg>
+                                </span>
+                                <span class="mr-2 font-medium text-xl">ساعت هوشمند</span>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--filter section of side bar-->
+                    <div class="w-full p-6" x-data="{accName:'' , activeClass:'rotate-180'}">
+                        <div class="text-orange-400 font-bold text-2xl mb-4">فیلتر</div>
+                        <!--Acc No1-->
+                        <div class="w-full" >
+                            <!--ACC No1 header icons and title-->
+                            <div class="flex items-center  text-slate-800 cursor-pointer mb-3">
+                                <!--icon and title -->
+                                <span class="w-5 h-5  relative rounded-full bg-gray-100">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="absolute w-4 h-5 right-1 top-1.5" fill="none"><path fill="currentColor" d="M12.83 13.27H1.17a.44.44 0 0 1-.44-.44c0-.24.2-.43.44-.43h11.66c.24 0 .44.2.44.43 0 .24-.2.44-.44.44Z"/><path fill="currentColor" d="M2.16 12.83h-.88l.03-7.01c0-.5.23-.96.62-1.26l4.08-3.18a1.61 1.61 0 0 1 1.98 0l4.08 3.17c.38.3.62.78.62 1.27v7.01h-.88v-7c0-.23-.1-.45-.28-.59L7.45 2.07a.74.74 0 0 0-.9 0L2.47 5.25a.73.73 0 0 0-.28.57l-.03 7.01Z"/><path fill="currentColor" d="M9.92 13.27H4.08a.44.44 0 0 1-.43-.44V7.3c0-.72.58-1.31 1.3-1.31h4.1c.71 0 1.3.59 1.3 1.31v5.54c0 .24-.2.44-.43.44Zm-5.4-.87h4.96V7.3c0-.25-.2-.45-.44-.45H4.96c-.24 0-.44.2-.44.44v5.1Z"/><path fill="#222F5D" d="M5.83 10.8a.44.44 0 0 1-.43-.45v-.87c0-.24.2-.44.43-.44.24 0 .44.2.44.44v.87c0 .24-.2.44-.44.44ZM7.88 4.81H6.13a.44.44 0 0 1-.44-.43c0-.24.2-.44.43-.44h1.75c.24 0 .44.2.44.44 0 .23-.2.43-.44.43Z"/></svg>
+                                </span>
+                                <div class="flex justify-between items-center px-2 text-lg w-full"  @click="accName = accName === 'brand' ? '' : 'brand'">
+                                <span >برند محصول</span>
+                                    <span :class="accName==='brand' ? activeClass : ''" class="transition duration-1000">
+                                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6"><path stroke-linecap="round" stroke-linejoin="round" d="m19.5 8.25-7.5 7.5-7.5-7.5" />
+                                        </svg>
+                                    </span>
+                                </div>
+                            </div>
+                            <!--ACC No1 checkboxes => content-->
+                                <div class="px-2 w-full" x-show="accName==='brand'" x-transition>
+                                    <label for="apple" class=" py-1 flex items-center cursor-pointer">
+                                        <input type="checkbox" name="brand" id="apple">
+                                        <span class="mr-3">اپل</span>
+                                    </label>
+                                    <label for="xiaomi" class=" py-1 flex items-center cursor-pointer">
+                                        <input type="checkbox" name="brand" id="xiaomi">
+                                        <span class="mr-3">شیائومی</span>
+                                    </label>
+                                    <label for="samsung" class="py-1 flex items-center cursor-pointer">
+                                        <input type="checkbox" name="brand" id="samsung">
+                                        <span class="mr-3">سامسونگ</span>
+                                    </label>
+                                    <label for="hwawai" class="py-1 flex items-center cursor-pointer">
+                                        <input type="checkbox" name="brand" id="hwawai">
+                                        <span class="mr-3">هواوی</span>
+                                    </label>
+                                </div>
+                        </div>
+                        <!--Acc No.2-->
+                    </div>
+                </div>
+            </div>
             <!--sort section-->
-            <div class=" hidden md:block col-span-9" >
-                <div class="bg-white px-4 flex items-center rounded-xl gap-x-6 text-gray-400 text-lg" x-data="{sort : 1 , activeClass:'text-slate-800 font-bold'}">
+            <div class=" hidden md:block col-span-9">
+                <div class="bg-white px-4 flex items-center rounded-xl gap-x-6 text-gray-400 text-lg"
+                     x-data="{sort : 1 , activeClass:'text-slate-800 font-bold'}">
                     <div>
                         <svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="42" height="42" rx="4" fill="#FFCBCB"/>
                             <path d="M17.7704 15H35.8957" stroke="#FF755C" stroke-width="4.5" stroke-linecap="round"/>
-                            <path opacity="0.34" d="M20.7913 20H32.8748" stroke="#FF755C" stroke-width="1.5" stroke-linecap="round"/>
+                            <path opacity="0.34" d="M20.7913 20H32.8748" stroke="#FF755C" stroke-width="1.5"
+                                  stroke-linecap="round"/>
                             <path d="M24.8192 25H28.847" stroke="#FF755C" stroke-width="1.5" stroke-linecap="round"/>
-                            <path d="M8.70745 30.3958C8.59584 30.3958 8.48424 30.355 8.39613 30.2675L4.83064 26.7267C4.66029 26.5575 4.66029 26.2775 4.83064 26.1083C5.00098 25.9392 5.28293 25.9392 5.45328 26.1083L8.70745 29.34L11.9616 26.1083C12.132 25.9392 12.4139 25.9392 12.5843 26.1083C12.7546 26.2775 12.7546 26.5575 12.5843 26.7267L9.01876 30.2675C8.93066 30.355 8.81905 30.3958 8.70745 30.3958Z" fill="#FF755C"/>
-                            <path d="M8.77039 29.604C8.49515 29.604 8.26691 29.2701 8.26691 28.8675V12.3405C8.26691 11.9379 8.49515 11.604 8.77039 11.604C9.04562 11.604 9.27387 11.9379 9.27387 12.3405V28.8675C9.27387 29.2701 9.04562 29.604 8.77039 29.604Z" fill="#FF755C"/>
+                            <path d="M8.70745 30.3958C8.59584 30.3958 8.48424 30.355 8.39613 30.2675L4.83064 26.7267C4.66029 26.5575 4.66029 26.2775 4.83064 26.1083C5.00098 25.9392 5.28293 25.9392 5.45328 26.1083L8.70745 29.34L11.9616 26.1083C12.132 25.9392 12.4139 25.9392 12.5843 26.1083C12.7546 26.2775 12.7546 26.5575 12.5843 26.7267L9.01876 30.2675C8.93066 30.355 8.81905 30.3958 8.70745 30.3958Z"
+                                  fill="#FF755C"/>
+                            <path d="M8.77039 29.604C8.49515 29.604 8.26691 29.2701 8.26691 28.8675V12.3405C8.26691 11.9379 8.49515 11.604 8.77039 11.604C9.04562 11.604 9.27387 11.9379 9.27387 12.3405V28.8675C9.27387 29.2701 9.04562 29.604 8.77039 29.604Z"
+                                  fill="#FF755C"/>
                         </svg>
 
                     </div>
-                    <button @click="sort=1"  :class="sort===1 && activeClass" class="py-4 px-3 relative">
+                    <button @click="sort=1" :class="sort===1 && activeClass" class="py-4 px-3 relative">
                         <span> محبوب ترین محصول</span>
                         <span x-show="sort===1" class="h-2 w-2 bg-orange-600 rounded-full absolute top-1 left-0"></span>
                     </button>
-                    <button @click="sort=2"  :class="sort===2 && activeClass" class="py-4 px-3 relative">
+                    <button @click="sort=2" :class="sort===2 && activeClass" class="py-4 px-3 relative">
                         <span>پرفروش ترین محصول </span>
                         <span x-show="sort===2" class="h-2 w-2 bg-orange-600 rounded-full absolute top-1 left-0"></span>
-                    </button><button @click="sort=3"  :class="sort===3 && activeClass" class="py-4 px-3 relative">
-                    <span>گرانترین محصول</span>
-                    <span x-show="sort===3" class="h-2 w-2 bg-orange-600 rounded-full absolute top-1 left-0"></span>
-                </button>
-                    <button @click="sort=4"  :class="sort===4 && activeClass" class="py-4 px-3 relative">
-                    <span>ارزانترین محصول</span>
-                    <span x-show="sort===4" class="h-2 w-2 bg-orange-600 rounded-full absolute top-1 left-0"></span>
-                </button>
+                    </button>
+                    <button @click="sort=3" :class="sort===3 && activeClass" class="py-4 px-3 relative">
+                        <span>گرانترین محصول</span>
+                        <span x-show="sort===3" class="h-2 w-2 bg-orange-600 rounded-full absolute top-1 left-0"></span>
+                    </button>
+                    <button @click="sort=4" :class="sort===4 && activeClass" class="py-4 px-3 relative">
+                        <span>ارزانترین محصول</span>
+                        <span x-show="sort===4" class="h-2 w-2 bg-orange-600 rounded-full absolute top-1 left-0"></span>
+                    </button>
                 </div>
             </div>
             <!--products-section-->
@@ -92,7 +178,8 @@
         { id: 3, brand: 'سونی', name: 'ساعت هوشمند سونی', price: '۱۳,۴۵۶,۷۸۹ تومان', image: 'https://example.com/ps5.jpg' },
         { id: 4, brand: 'دل', name: 'لپ‌تاپ XPS 13', price: '۱۳,۴۵۶,۷۸۹ تومان', image: 'https://example.com/xps13.jpg' },
         { id: 5, brand: 'نایک', name: 'کفش ورزشی ایر مکس', price: '۱۳,۴۵۶,۷۸۹ تومان', image: 'https://example.com/airmax.jpg' }
-    ]}" class="grid justify-between gap-x-3 gap-y-6 lg::gap-x-8 min-[420px]:grid-cols-2  sm:grid-cols-2 lg:grid-cols-4 py-4">
+    ]}"
+                     class="grid justify-between gap-x-3 gap-y-6 lg::gap-x-8 min-[420px]:grid-cols-2  sm:grid-cols-2 lg:grid-cols-4 py-4">
                     <!--product card-->
                     <template x-for="product in products" :key="product.id">
                         <div class="bg-white rounded-xl p-2 shadow-xl">
@@ -102,12 +189,14 @@
                             </div>
                             <!--card colors and options-->
                             <div class="flex justify-between items-center mb-2">
-                                <span class="text-slate-300 text-sm md:text-base lg:text-lg" x-text="product.brand"></span>
+                                <span class="text-slate-300 text-sm md:text-base lg:text-lg"
+                                      x-text="product.brand"></span>
                                 <!--color groups section -->
                                 <div x-data="{color : 'red'}" class="flex items-center">
                                     <div @click="color='red'" :class="color==='red' ? 'ring-2 ring-red-500 ' : ''"
                                          class="h-6 w-6  sm:w-8 sm:h-8 rounded-full cursor-pointer border-2  bg-red-500 ">
-                                        <svg x-show="color==='red'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                        <svg x-show="color==='red'" xmlns="http://www.w3.org/2000/svg"
+                                             viewBox="0 0 20 20"
                                              fill="currentColor" class="size-5 sm:size-6 text-white">
                                             <path fill-rule="evenodd"
                                                   d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
@@ -116,7 +205,8 @@
                                     </div>
                                     <div @click="color='blue'" :class="color==='blue' ? 'ring-2 ring-blue-500 ' : ''"
                                          class="h-6 w-6 sm:w-8 sm:h-8 rounded-full cursor-pointer border-2  bg-blue-500 -mr-1.5 ">
-                                        <svg x-show="color==='blue'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                        <svg x-show="color==='blue'" xmlns="http://www.w3.org/2000/svg"
+                                             viewBox="0 0 20 20"
                                              fill="currentColor" class="size-5 sm:size-6 text-white">
                                             <path fill-rule="evenodd"
                                                   d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
@@ -125,7 +215,8 @@
                                     </div>
                                     <div @click="color='green'" :class="color==='green' ? 'ring-2 ring-green-500 ' : ''"
                                          class="h-6 w-6 sm:w-8 sm:h-8  rounded-full cursor-pointer border-2  bg-green-500 -mr-1.5">
-                                        <svg x-show="color==='green'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"
+                                        <svg x-show="color==='green'" xmlns="http://www.w3.org/2000/svg"
+                                             viewBox="0 0 20 20"
                                              fill="currentColor" class="size-5 text-white sm:size-6">
                                             <path fill-rule="evenodd"
                                                   d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z"
@@ -136,10 +227,14 @@
                             </div>
                             <!--card-descriptions-->
                             <div class="text-center sm:text-start w-full mb-2">
-                                <p x-text="product.name" class="text-slate-800 font-bold text-sm sm:text-base md:text-lg">ساعت هوشمند اپل سری ۳</p>
+                                <p x-text="product.name"
+                                   class="text-slate-800 font-bold text-sm sm:text-base md:text-lg">ساعت هوشمند اپل سری
+                                    ۳</p>
                             </div>
                             <div class="text-center w-full mb-2 ">
-                                <p x-text="product.price" class="text-orange-600 font-bold text-sm sm:text-base md:text-lg">'۱۳,۴۵۶,۷۸۹ تومان'</p>
+                                <p x-text="product.price"
+                                   class="text-orange-600 font-bold text-sm sm:text-base md:text-lg">'۱۳,۴۵۶,۷۸۹
+                                    تومان'</p>
                             </div>
                             <div class="w-full bg-slate-100 p-0.5 mb-1 h-0.5"></div>
                             <button class="w-full text-orange-400 font-bold md:text-lg py-1">مشاهده و سفارش</button>
